# evm-prover

./: Cargo.toml  Makefile  README.md  build.rs
crates/evm-prover/: Cargo.toml  README.md  build.rs
crates/evm-prover/src/: lib.rs
crates/evm-prover/src/commands/: cli.rs
crates/evm-prover/src/proto/: celestia.prover.v1.rs
crates/sp1/: Cargo.toml  README.md
crates/sp1/src/: main.rs
proto/: buf.yaml
proto/prover/v1/: prover.proto
src/: lib.rs
src/commands/: cli.rs  command.rs  config.rs  init.rs  mod.rs  start.rs  version.rs
src/config/: config.rs
src/evm/: prover.rs
src/grpc/: server.rs
src/proto/: mod.rs
