[package]
name = "evm-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
anyhow = "1.0"
tokio-stream = "0.1"
